syntax = "proto3";

option csharp_namespace = "KBMGrpcService.Protos";

package user;

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc QueryUsers(QueryUsersRequest) returns (QueryUsersResponse);
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
    rpc AssociateUserToOrganization(AssociateUserToOrganizationRequest) returns (AssociateUserToOrganizationResponse);
    rpc DisassociateUserFromOrganization(DisassociateUserFromOrganizationRequest) returns (DisassociateUserFromOrganizationResponse);
    rpc QueryUsersForOrganization(QueryUsersForOrganizationRequest) returns (QueryUsersForOrganizationResponse);
}

message CreateUserRequest {
    string name = 1;
    string username = 2;
    string email = 3;
}

message CreateUserResponse {
    int64 userId = 1;
}

message GetUserRequest {
    int64 userId = 1;
}

message GetUserResponse {
    string name = 1;
    string username = 2;
    string email = 3;
    int64 createdAt = 4;
}

message QueryUsersRequest {
    int32 page = 1;
    int32 pageSize = 2;
    string orderBy = 3;
    string direction = 4;
    string queryString = 5;
}

message QueryUsersResponse {
    int32 page = 1;
    int32 pageSize = 2;
    int32 total = 3;
    repeated UserModel users = 4;
}

message UserModel {
    int64 id = 1;
    string name = 2;
    string username = 3;
    string email = 4;
    int64 organizationId = 5;
    int64 createdAt = 6;
    int64 deletedAt = 7;
    int64 updatedAt = 8;
    bool isDeleted = 9;
}

message UpdateUserRequest {
    int64 userId = 1;
    string name = 2;
    string username = 3;
    string email = 4;
    int64 updatedAt = 5;
}

message DeleteUserRequest {
    int64 userId = 1;
}

message AssociateUserToOrganizationRequest {
    int64 userId = 1;
    int64 organizationId = 2;
}

message AssociateUserToOrganizationResponse {
    string message = 1;
}

message DisassociateUserFromOrganizationRequest {
    int64 userId = 1;
}

message DisassociateUserFromOrganizationResponse {
    string message = 1;
}

message QueryUsersForOrganizationRequest {
    int64 organizationId = 1;
    int32 page = 2;
    int32 pageSize = 3;
    string orderBy = 4;
    string direction = 5;
    string queryString = 6;
}

message QueryUsersForOrganizationResponse {
    int32 page = 1;
    int32 pageSize = 2;
    int32 total = 3;
    repeated UserModel users = 4;
}

message UpdateUserResponse {
    string message = 1;
}

message DeleteUserResponse {
    string message = 1;
}

